release: ResonanceDB Server v1.1.1